[gd_scene load_steps=7 format=3 uid="uid://b62kij8al7esb"]

[ext_resource type="Script" path="res://scenes/Authentication.gd" id="1_0dp8h"]
[ext_resource type="FontFile" uid="uid://de0ucb018os4" path="res://assets/fonts/Lato-Regular.ttf" id="2_dhuos"]
[ext_resource type="StyleBox" uid="uid://ci8ck4w1l2pac" path="res://assets/styles/lineedit.tres" id="2_sf82m"]
[ext_resource type="Theme" uid="uid://cjw2wai33igwn" path="res://assets/themes/desktop_theme.tres" id="4_7ecg6"]
[ext_resource type="FontFile" uid="uid://cakik77q10q3j" path="res://assets/fonts/Lato-Bold.ttf" id="4_a5hqb"]
[ext_resource type="StyleBox" uid="uid://bg0t3fu5mvrjy" path="res://assets/styles/btn_press.tres" id="5_50cdo"]

[node name="Authentication" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2
script = ExtResource("1_0dp8h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_7ecg6")
tab_alignment = 2

[node name="Login" type="TabBar" parent="VBoxContainer/TabContainer"]
layout_mode = 2
theme = ExtResource("4_7ecg6")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Email" type="LineEdit" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhuos")
theme_override_styles/normal = ExtResource("2_sf82m")
placeholder_text = "Aluno"

[node name="Password" type="LineEdit" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhuos")
theme_override_styles/normal = ExtResource("2_sf82m")
placeholder_text = "Senha"
select_all_on_focus = true
secret = true

[node name="Control" type="Control" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="LoginBtn" type="Button" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_7ecg6")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_a5hqb")
text = "Fazer Login"

[node name="Cadastre-se" type="TabBar" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_7ecg6")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Cadastre-se"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Nome" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastre-se/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhuos")
theme_override_styles/normal = ExtResource("2_sf82m")
placeholder_text = "Nome"

[node name="CadEmail" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastre-se/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhuos")
theme_override_styles/normal = ExtResource("2_sf82m")
placeholder_text = "Email"

[node name="CadPassword" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastre-se/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhuos")
theme_override_styles/normal = ExtResource("2_sf82m")
placeholder_text = "Senha"
select_all_on_focus = true
secret = true

[node name="SignupBtn" type="Button" parent="VBoxContainer/TabContainer/Cadastre-se/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_7ecg6")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_a5hqb")
theme_override_styles/pressed = ExtResource("5_50cdo")
text = "Cadastrar"

[node name="Status" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
bbcode_enabled = true
fit_content = true

[node name="ErrPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(200, 124)
borderless = true
always_on_top = true
transparent = true

[node name="ErrMsg" type="RichTextLabel" parent="ErrPopup"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 75.0
bbcode_enabled = true
text = "sdgdsgsdgsdgsdgsdgdsgsdgsdgsdgsdg"
fit_content = true

[connection signal="pressed" from="VBoxContainer/TabContainer/Login/VBoxContainer/LoginBtn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Cadastre-se/VBoxContainer/SignupBtn" to="." method="_on_signup_btn_pressed"]
